src/test/ui/resolve/issue-23305.stderr
error: `Self` is not allowed in the self type of an `impl` block
  --> $DIR/issue-23305.rs:5:16
   |
LL | impl dyn ToNbt<Self> {}
   |                ^^^^
   |
   = note: referencing `Self` in this position would produce an infinitely recursive type

error: aborting due to previous error

